--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
 torch
 torchvision
-opencv-python-headless==4.8.1.78
+opencv-python-headless>=4.9.0
 ultralytics
 pillow
-numpy==1.25.2
+numpy>=1.26.0
